// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component NewsFeed should not render anything if there are no news 1`] = `""`;

exports[`Component NewsFeed should not render anything while loading 1`] = `""`;

exports[`Component NewsFeed should render news feed 1`] = `
<StandardCard
  darkHeader={true}
  title="Latest news"
>
  <div
    key="0"
    style={
      Object {
        "padding": "8px 0px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      key="newsItem-0"
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="center"
          container={true}
          direction="column"
          justifyContent="center"
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            className="day"
            item={true}
          >
            15
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="month"
            item={true}
          >
            Dec
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="year"
            item={true}
          >
            2018
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="body2"
        >
          <b>
            Outage
          </b>
           - 
          There will be a 30 minute outage from 12:00-12:30pm on Wednesday 22/8/17 to upgrade the eSpace database. Apologies for this inconvenience.
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
  <div
    key="1"
    style={
      Object {
        "padding": "8px 0px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      key="newsItem-1"
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="center"
          container={true}
          direction="column"
          justifyContent="center"
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            className="day"
            item={true}
          >
            15
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="month"
            item={true}
          >
            Dec
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="year"
            item={true}
          >
            2017
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="body2"
        >
          <b>
            Statistics
          </b>
           - 
          The 
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
  <div
    key="2"
    style={
      Object {
        "padding": "8px 0px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      key="newsItem-2"
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="center"
          container={true}
          direction="column"
          justifyContent="center"
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            className="day"
            item={true}
          >
            15
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="month"
            item={true}
          >
            Dec
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="year"
            item={true}
          >
            2016
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="body2"
        >
          <b>
            PREFS - Account Preferences
          </b>
           - 
          When you set 'Remember search parameters' to 'Yes' via the PREFS tab, date filters applied to searches will now be remembered between searches
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</StandardCard>
`;

exports[`Component NewsFeed should show new count if above set limit 1`] = `
<StandardCard
  darkHeader={true}
  title="Latest news"
>
  <div
    key="0"
    style={
      Object {
        "padding": "8px 0px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      key="newsItem-0"
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="center"
          container={true}
          direction="column"
          justifyContent="center"
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            className="day"
            item={true}
          >
            15
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="month"
            item={true}
          >
            Dec
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            className="year"
            item={true}
          >
            2018
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="body2"
        >
          <b>
            Outage
          </b>
           - 
          There will be a 30 minute outage from 12:00-12:30pm on Wednesday 22/8/17 to upgrade the eSpace database. Apologies for this inconvenience.
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</StandardCard>
`;
